// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`denormalize denormalizes entities 1`] = `
Array [
  Object {
    "id": 1,
    "type": "foo",
  },
  Object {
    "id": 2,
    "type": "bar",
  },
]
`;

exports[`denormalize denormalizes nested entities 1`] = `
Object {
  "author": Object {
    "id": "8472",
    "name": "Paul",
  },
  "body": "This article is great.",
  "comments": Array [
    Object {
      "comment": "I like it!",
      "id": "comment-123-4738",
      "user": Object {
        "id": "10293",
        "name": "Jane",
      },
    },
  ],
  "id": "123",
  "title": "A Great Article",
}
`;

exports[`denormalize denormalizes with function as idAttribute 1`] = `
Array [
  Object {
    "guest": null,
    "id": "1",
    "name": "Esther",
  },
  Object {
    "guest": Object {
      "guest_id": 1,
    },
    "id": "2",
    "name": "Tom",
  },
]
`;

exports[`normalize can use fully custom entity classes 1`] = `
Object {
  "entities": Object {
    "children": Object {
      "4": Object {
        "id": 4,
        "name": "lettuce",
      },
    },
    "food": Object {
      "1234": Object {
        "children": Array [
          4,
        ],
        "name": "tacos",
        "uuid": "1234",
      },
    },
  },
  "result": Object {
    "schema": "food",
    "uuid": "1234",
  },
}
`;

exports[`normalize ignores null values 1`] = `
Object {
  "entities": Object {},
  "result": Array [
    null,
  ],
}
`;

exports[`normalize ignores null values 2`] = `
Object {
  "entities": Object {},
  "result": Array [
    undefined,
  ],
}
`;

exports[`normalize ignores null values 3`] = `
Object {
  "entities": Object {},
  "result": Array [
    false,
  ],
}
`;

exports[`normalize normalize nested entities with reverse collection 1`] = `
Object {
  "entities": Object {
    "articles": Object {
      "1": Object {
        "author": "1",
        "comments": Array [
          "3",
          "5",
        ],
        "id": "1",
        "title": "non sint aliquip occaecat",
      },
      "2": Object {
        "author": "2",
        "comments": Array [
          "1",
          "6",
        ],
        "id": "2",
        "title": "non sint aliquip occaecat",
      },
      "3": Object {
        "author": "3",
        "comments": Array [
          "2",
          "4",
        ],
        "id": "3",
        "title": "laborum cupidatat ex tempor",
      },
    },
    "comments": Object {
      "1": Object {
        "article": "2",
        "id": "1",
        "msg": "anim duis irure ad",
        "user": "1",
      },
      "2": Object {
        "article": "3",
        "id": "2",
        "msg": "anim Lorem irure sit",
        "user": "1",
      },
      "3": Object {
        "article": "1",
        "id": "3",
        "msg": "dolore do proident ullamco",
        "user": "2",
      },
      "4": Object {
        "article": "3",
        "id": "4",
        "msg": "exercitation sunt et est",
        "user": "2",
      },
      "5": Object {
        "article": "1",
        "id": "5",
        "msg": "dolore id nostrud aliqua",
        "user": "3",
      },
      "6": Object {
        "article": "2",
        "id": "6",
        "msg": "qui qui adipisicing sit",
        "user": "3",
      },
    },
    "users": Object {
      "1": Object {
        "articles": Array [
          "1",
        ],
        "comments": Array [
          "1",
          "2",
        ],
        "id": "1",
        "name": "Kent Foster",
      },
      "2": Object {
        "articles": Array [
          "2",
        ],
        "comments": Array [
          "3",
          "4",
        ],
        "id": "2",
        "name": "Kent Foster",
      },
      "3": Object {
        "articles": Array [
          "3",
        ],
        "comments": Array [
          "5",
          "6",
        ],
        "id": "3",
        "name": "Amparo Lambert",
      },
    },
  },
  "result": Object {
    "comments": Array [
      "1",
      "2",
      "3",
      "4",
      "5",
      "6",
    ],
    "users": Array [
      "1",
      "2",
      "3",
    ],
  },
}
`;

exports[`normalize normalizes entities 1`] = `
Object {
  "entities": Object {
    "tacos": Object {
      "1": Object {
        "id": 1,
        "type": "foo",
      },
      "2": Object {
        "id": 2,
        "type": "bar",
      },
    },
  },
  "result": Array [
    1,
    2,
  ],
}
`;

exports[`normalize normalizes nested entities 1`] = `
Object {
  "entities": Object {
    "articles": Object {
      "123": Object {
        "author": "8472",
        "body": "This article is great.",
        "comments": Array [
          "comment-123-4738",
        ],
        "id": "123",
        "title": "A Great Article",
      },
    },
    "comments": Object {
      "comment-123-4738": Object {
        "comment": "I like it!",
        "id": "comment-123-4738",
        "user": "10293",
      },
    },
    "users": Object {
      "10293": Object {
        "id": "10293",
        "name": "Jane",
      },
      "8472": Object {
        "id": "8472",
        "name": "Paul",
      },
    },
  },
  "result": "123",
}
`;

exports[`normalize passes over pre-normalized values 1`] = `
Object {
  "entities": Object {
    "articles": Object {
      "123": Object {
        "author": 1,
        "id": "123",
        "title": "normalizr is great!",
      },
    },
  },
  "result": "123",
}
`;

exports[`normalize uses the non-normalized input when getting the ID for an entity 1`] = `
Object {
  "entities": Object {
    "recommendations": Object {
      "456": Object {
        "user": "456",
      },
    },
    "users": Object {
      "456": Object {
        "id": "456",
      },
    },
  },
  "result": "456",
}
`;

exports[`normalize uses the non-normalized input when getting the ID for an entity 2`] = `
Array [
  Array [
    Object {
      "user": Object {
        "id": "456",
      },
    },
    Object {
      "user": Object {
        "id": "456",
      },
    },
    null,
  ],
  Array [
    Object {
      "user": Object {
        "id": "456",
      },
    },
    Object {
      "user": Object {
        "id": "456",
      },
    },
    null,
  ],
]
`;
